# tigerclaw

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  example.env  merge_summary.md  pyproject.toml  start.ps1  stop.ps1  test_config.yaml  tigerclaw.yaml
context/business/: README.md  glossary.md
context/business/meta/: commit-tracking.json  progress.json
context/tech/services/: README.md  service-list.md
extensions/feishu/: __init__.py  plugin.py
src/: __main__.py
src/agents/: __init__.py  context.py  context_cache.py  context_discovery.py  cooldown_decision.py  failover_error.py  failover_policy.py  failover_reason.py  model_fallback.py  model_fallback_types.py  model_selection.py  probe_throttle.py  runner.py  timeout.py  tool_registry.py  usage.py
src/agents/acp/: __init__.py  client.py  types.py
src/agents/auth_profiles/: __init__.py  oauth.py  order.py  store.py  types.py  usage.py
src/agents/plugins/: __init__.py  factory.py  registry.py  types.py
src/agents/providers/: __init__.py  anthropic.py  base.py  openai.py  openai_codex.py  openrouter.py
src/agents/tools/: __init__.py  bash.py  command_analyzer.py  file_guard.py  network_guard.py  permission.py  result.py  security_gateway.py
src/auto_reply/: chunk.py  commands.py  normalize.py  templating.py  types.py
src/auto_reply/reply/: reply_dispatcher.py
src/browser/: __init__.py  cdp.py  chrome.py  config.py  profiles.py  server.py  tabs.py  types.py
src/channels/: __init__.py  account_status_sink.py  actions.py  directory.py  ids.py  lifecycle.py  outbound.py  pairing.py  plugin_builder.py  registry.py  security.py  status.py
src/channels/adapters/: __init__.py  actions.py  command.py  config.py  directory.py  exec_approval.py  helpers.py  lifecycle.py  mention.py  outbound.py  pairing.py  security.py  status.py  streaming.py
src/channels/feishu/: __init__.py  inbound.py  outbound.py  setup_wizard.py  types.py
src/channels/types/: __init__.py  adapters.py  core.py  plugin.py
src/cli/: __init__.py  main.py
src/cli/commands/: __init__.py  agent.py  approvals.py  browser.py  config.py  cron.py  devices.py  doctor.py  gateway.py  models.py  nodes.py  plugins.py  sessions.py
src/core/: recovery.py
src/core/config/: __init__.py  defaults.py  hot_reload.py  integrated_refresh.py  loader.py  schema.py  snapshot.py
src/core/logging/: __init__.py  audit.py  logger.py  metrics.py  redact.py  request_context.py  sampling.py
src/core/types/: __init__.py  config.py  delivery.py  errors.py  messages.py  providers.py  sessions.py  tools.py
src/daemon/: constants.py  launchd.py  paths.py  schtasks.py  service.py  systemd.py  types.py
src/gateway/: __init__.py  auth.py  broadcast.py  canvas_capability.py  config_reload.py  connection_pool.py  health.py  http.py  net.py  node_invoke.py  node_wake.py  openai_http.py  openai_images.py  openai_messages.py  openai_transport.py  openai_ws.py  pending_actions.py  rate_limit.py  rpc_config.py  server.py  shutdown.py  tailscale.py  tls.py  websocket.py
src/gateway/methods/: __init__.py  approvals.py  channels.py  chat.py  config.py  devices.py  models.py  nodes.py  sessions.py  tools.py  traces.py
src/gateway/middleware/: __init__.py  security.py  timing.py
src/infra/: __init__.py  approval_socket.py  device_pairing.py  exec_approvals.py  node_pairing.py  push_apns.py  remote_approvals.py
src/infra/outbound/: __init__.py  deliver.py  delivery_queue.py  media.py  payloads.py  types.py
src/plugins/: __init__.py  api.py  command_types.py  discovery.py  hook_types.py  hooks.py  hot_reload.py  lifecycle.py  loader.py  provider_types.py  registry.py  sandbox.py
src/security/: __init__.py  runtime.py  secrets.py  web_tools.py
src/services/: __init__.py
src/services/cron/: __init__.py  agent_turn.py  cron_parser.py  delivery.py  heartbeat.py  monitor.py  schedule_parser.py  scheduler.py  session_executor.py  task_store.py  types.py
src/services/memory/: __init__.py  embedding.py  embedding_retry.py  file_watcher.py  mmr.py  search.py  sqlite_store.py  temporal_decay.py  vector_store.py
src/services/performance/: __init__.py  async_optimizer.py  cache.py  connection_pool.py
src/services/skills/: __init__.py  exceptions.py  frontmatter.py  loader.py  models.py  registry.py  types.py
src/services/trace/: __init__.py  store.py  types.py
src/sessions/: atomic_write.py  disk_budget.py  file_lock.py  maintenance.py  manager.py  merge.py  rotate.py  store.py  store_cache.py
src/tigerclaw/: __init__.py  __main__.py
src/tigerclaw/agents/: __init__.py  compaction.py  context.py  failover.py  model_catalog.py  runner.py  runtime.py  tool_registry.py  tools.py
src/tigerclaw/cli/: __init__.py  (+1 more)
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.vue
(+143 files in other folders)
