[project]
name = "tigerclaw"
version = "0.1.0"
description = "TigerClaw - OpenClaw Python Implementation"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "TigerClaw Team" }]
keywords = ["ai", "llm", "agent", "gateway", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
    "python-dotenv>=1.0.0",
    "openai>=1.60.0",
    "watchdog>=5.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.60.0"]
anthropic = ["anthropic>=0.40.0"]
openrouter = ["openai>=1.60.0"]
feishu = ["requests>=2.32.0"]
slack = ["slack-sdk>=3.33.0"]
discord = ["discord.py>=2.4.0"]
telegram = ["python-telegram-bot>=21.0"]
google = ["google-generativeai>=0.8.0"]
local-embedding = ["sentence-transformers>=3.0.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pyright>=1.1.0",
    "ruff>=0.8.0",
]
all = [
    "tigerclaw[openai,anthropic,openrouter,feishu,slack,discord,telegram,google,local-embedding,dev]",
]

[project.scripts]
tigerclaw = "cli.main:app"

[project.urls]
Homepage = "https://github.com/openclaw/tigerclaw"
Documentation = "https://github.com/openclaw/tigerclaw#readme"
Repository = "https://github.com/openclaw/tigerclaw"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/channels", "src/cli", "src/core", "src/gateway", "src/plugins", "src/security", "src/services", "src/sessions"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
    "ARG001", # unused function argument
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "channels", "cli", "core", "gateway", "plugins", "security", "services", "sessions"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
strictParameterNoneValue = true
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
